Updating and making the script easier to use
 - Using Ethers and Hardhat as main dependencies
 - Defining dependencies in package.json
 - Added several convenience scripts
 - Documenting how to use it

--- a/.gitignore
+++ b/.gitignore
@@ -397,8 +397,12 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-# Contracts
-./contracts
-./build
-build/
-contracts/
+# Hardhat folders
+cache
+artifacts
+
+# Deployment files
+deployData.json
+
+# Config file
+testData.json
